welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:46: error: ')' expected but ';' found.
		dessiner((tab((i - 1) + num) % (getMondeHauteur - 1));
                                                                     ^